chore: use swagger for api docs
